--- a/books/HistoryClimate/reader_browser_scrolling.html
+++ b/books/HistoryClimate/reader_browser_scrolling.html
@@ -30,9 +30,6 @@
       display: flex; align-items: center; gap: 12px;
       padding: env(safe-area-inset-top) 12px 12px 12px;
       backdrop-filter: var(--bar-blur); background: var(--bar);
-      /* Ensure the menu remains responsive even when transformed/scaled. Explicitly enable
-         pointer events so touches are still captured in pinch‑zoom mode. */
-      pointer-events: auto;
     }
     .btn { border: 0; border-radius: 12px; padding: 8px 12px; background: rgba(255,255,255,0.06); color: var(--fg); font-size: 16px; cursor: pointer; }
     .btn:active { background: rgba(255,255,255,0.1); }
@@ -40,15 +37,10 @@
 
     .pages { position: relative; width: 100%; max-width: 1200px; margin: 0 auto;
       padding-top: calc(48px + env(safe-area-inset-top)); padding-bottom: 24px; }
-    /*
-      Each page container no longer centers itself horizontally; margin-left and margin-right are
-      zero so that odd and even pages align uniformly. A vertical margin of 12px separates pages.
-      Previously the `auto` horizontal margin sometimes produced visually different side margins.
-    */
-    .page { display: grid; place-items: center; margin: 12px 0; width: 100%; position: relative; }
+    .page { display: grid; place-items: center; margin: 12px auto; width: 100%; position: relative; }
     .sheet { width: var(--pageW); }
     .sheet canvas { display: block; background: var(--pagebg); box-shadow: 0 6px 26px rgba(0,0,0,0.36); }
-    .pnum { margin-top: 6px; font-size: 12px; color: var(--muted); user-select: none; }
+    .pnum { margin-top: 6px; font-size: 12px; color: var(--muted); user-select: none; /* Hide page numbers below each page */ display: none; }
 
     .overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.35); z-index: 1200; opacity: 0; pointer-events: none; transition: opacity .2s; }
     .overlay.show { opacity: 1; pointer-events: auto; }
@@ -218,6 +210,18 @@
     // acts as a "reset" after the user has pinch‑zoomed.
     if (resetBtn) {
       resetBtn.addEventListener('click', () => {
+        // Determine which page is currently nearest the top before resetting. This allows
+        // the user to remain on the same page after the layout is restored.
+        let currentPage = 1;
+        {
+          const pages = document.querySelectorAll('.page');
+          let bestDist = Infinity;
+          pages.forEach(p => {
+            const r = p.getBoundingClientRect();
+            const dist = Math.abs(r.top - 0);
+            if (dist < bestDist) { bestDist = dist; currentPage = parseInt(p.dataset.page, 10); }
+          });
+        }
         // Compute appropriate width for current orientation and update all pages
         const w = computeFitWidth();
         setPageWidth(w);
@@ -225,6 +229,11 @@
         rerenderVisible();
         // Ensure fixed UI elements (top bar, progress bar) are realigned
         updateFixedPositions();
+        // After the layout stabilizes, scroll back to the previously active page
+        setTimeout(() => {
+          const el = document.querySelector('[data-page="' + currentPage + '"]');
+          if (el) el.scrollIntoView({behavior: 'auto', block: 'start'});
+        }, 60);
       });
     }
     overlay.addEventListener('click', closeDrawer);
@@ -441,12 +450,28 @@
 
       if (widthDelta > 120) {
         // Orientation or big chrome change — refit page width
+        // Capture the page currently nearest the top so we can restore it after adjusting layout
+        let currentPage = 1;
+        {
+          const pages = document.querySelectorAll('.page');
+          let bestDist = Infinity;
+          pages.forEach(p => {
+            const r = p.getBoundingClientRect();
+            const dist = Math.abs(r.top - 0);
+            if (dist < bestDist) { bestDist = dist; currentPage = parseInt(p.dataset.page, 10); }
+          });
+        }
         // Determine optimal width considering the current viewport height and page aspect ratio
         const w = computeFitWidth();
         setPageWidth(w);
         rerenderVisible();
         // Reposition fixed UI elements to account for new viewport size
         updateFixedPositions();
+        // After the layout has settled, scroll back to the page the user was reading
+        setTimeout(() => {
+          const el = document.querySelector('[data-page="' + currentPage + '"]');
+          if (el) el.scrollIntoView({behavior: 'auto', block: 'start'});
+        }, 60);
       } else if (scaleDelta > 0.02) {
         // Pinch — rerender visible with new effective DPR
         rerenderVisible();
